--- a/日文檢定/聽力測驗.md
+++ b/日文檢定/聽力測驗.md
@@ -5,14 +5,16 @@
     - [第二題 2024 07 jp](#第二題-2024-07-jp)
     - [第三題 2024 07 jp](#第三題-2024-07-jp)
     - [第四題 2024 07 jp](#第四題-2024-07-jp)
-    - [第五題 2024 07 jp](#第五題-2024-07-jp)  
+    - [第五題 2024 07 jp](#第五題-2024-07-jp)
+    - [第六題 2024 07 jp](#第六題-2024-07-jp) 
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
     - [第二題 2024 07 cn](#第二題-2024-07-cn)
     - [第三題 2024 07 cn](#第三題-2024-07-cn)
     - [第四題 2024 07 cn](#第四題-2024-07-cn)
-    - [第五題 2024 07 cn](#第五題-2024-07-cn) 
+    - [第五題 2024 07 cn](#第五題-2024-07-cn)
+    - [第六題 2024 07 cn](#第六題-2024-07-cn)
 
 # 日文
 ## 2024 07 jp
@@ -145,6 +147,21 @@
 ３．　海辺の生き物の観察会　　４．ヨットの操縦体験
 
 [第五題 2024 07 cn](#第五題-2024-07-cn) 
+
+### 第六題 2024 07 jp
+
+ラジオでアナウンサーの男の人が本屋の店長にインタビューをしています。店長はどんな絵本を子どもに読んであげるといいと言っていますか。
+
+男：絵本専門店の靑井書店の店長、高橋さんにお話を伺います。絵本と言っても、いろいろなものがありますが、どんな絵本を子供に読んであげたらいいでしょうか。
+
+女：そうですね。子供の年齢や好みを考えたり、何がいいか悩みますよね。教育効果が高い絵本や長い間読まれている名作の絵本を読んであげるという方も多いと思います。私は親自身が読んで面白いかどうかということに尽きると思います。親が楽しみながら絵本を読んで聞かせることで子供自身も本に興味、関心を持つようになるのではないでしょうか。
+
+店長はどんな絵本を子供に読んであげるといいと言っていますか。
+
+１．子供の年齢や好みに合う絵本　2．教育効果が高い絵本
+３．長い間読まれている名作の絵本　４．自分自身が面白いと感じる絵本
+
+[第六題 2024 07 cn](#第六題-2024-07-cn)
 
 ---
 
@@ -281,6 +298,8 @@
 
 ### 第五題 2024 07 cn
 
+答案: 3
+
 在「海上體驗學習」活動中，工作人員正在發言。參加者接下來最先會參加什麼呢？
 
 女：各位，感謝大家參加「享受大海的體驗」活動。本來我們預定在各項體驗開始前，先在室內舉行一場關於海邊生物的講座，
@@ -293,3 +312,22 @@
 3．海邊生物的觀察活動  4．帆船操作體驗
 
 [第五題 2024 07 jp](#第五題-2024-07-jp)
+
+### 第六題 2024 07 jp
+
+答案: 4
+
+在廣播中，一位男主播正在訪問書店店長。
+店長建議該讀哪種繪本給小孩聽。
+
+男：今天我們訪問的是專賣繪本的「青井書店」店長，高橋女士。繪本的種類有很多，那麼該讀哪種繪本給孩子比較好呢？
+
+女：是啊，會考慮孩子的年齡和喜好，也會煩惱要選什麼樣的繪本對吧。我想也有很多人會選擇教育效果高的繪本，或者是長年以來廣受歡迎的經典繪本。但我認為，最重要的還是「父母自己讀起來覺得有趣」這一點。當父母抱著開心的心情唸繪本給孩子聽時，孩子自然也會對書產生興趣和關心，不是嗎？
+
+店長認為應該唸什麼樣的繪本給孩子聽？
+
+1．符合孩子年齡與喜好的繪本 2．具有教育效果的繪本
+
+3．長年受到歡迎的經典繪本 4．自己覺得有趣的繪本
+
+[第六題 2024 07 jp](#第六題-2024-07-jp)
