--- a/日文檢定/聽力測驗.md
+++ b/日文檢定/聽力測驗.md
@@ -6,7 +6,8 @@
     - [第三題 2024 07 jp](#第三題-2024-07-jp)
     - [第四題 2024 07 jp](#第四題-2024-07-jp)
     - [第五題 2024 07 jp](#第五題-2024-07-jp)
-    - [第六題 2024 07 jp](#第六題-2024-07-jp) 
+    - [第六題 2024 07 jp](#第六題-2024-07-jp)
+    - [第七題 2024 07 jp](#第七題-2024-07-jp) 
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -15,6 +16,7 @@
     - [第四題 2024 07 cn](#第四題-2024-07-cn)
     - [第五題 2024 07 cn](#第五題-2024-07-cn)
     - [第六題 2024 07 cn](#第六題-2024-07-cn)
+    - [第七題 2024 07 cn](#第七題-2024-07-cn)
 
 # 日文
 ## 2024 07 jp
@@ -163,6 +165,34 @@
 ３．長い間読まれている名作の絵本　４．自分自身が面白いと感じる絵本
 
 [第六題 2024 07 cn](#第六題-2024-07-cn)
+
+### 第七題 2024 07 jp
+
+会社で女の人と部長が話しています。部長は試作品をどのように変えたほうがいいと言っていますか。
+
+女：部長。健康ドリンクの試作品、飲んでいただましたでしょうか。
+
+男：飲みました。試作品の説明も読みましたよ。今まで若い人をターゲットにしたドリンク商品は多かったけど、高齢者向けに開発したっていう点、斬新でよっかたと思うよ。
+
+女：ありがとうございます。高齢者が手軽いに栄養が摂れるよう、飲むタイプにしました。
+
+男：うん、クッキーのようなか固形タイプは高齢の方だと食べづらかったりするからいいと思うんだけど、一回で飲む量としては少し多い気がしたんだけど、どうかな？
+
+女：それですね。一日で必要な栄養を摂取できるよう、他社の製品と比べると容量が多くなっています。
+
+男：一度に飲みきれない場合があるかもしれないからキャップで閉められる容器に変えたらどうかな？
+
+女：確かに、そうですね。
+
+男：もう少し甘い方が好きな人もいるかもしれないけど、個人的なにはこれぐらいの甘さの方が飲みやすかったし、いい商品になると思うから頑張ってね。
+
+部長は試作品をどのように変えたほうがいいと言っていますか。
+
+１．固形タイプの商品にする　　２．容量を少なくする
+
+３．二つ付きの容器にする　　４．味をもう少し甘くなる
+
+[第七題 2024 07 cn](#第七題-2024-07-cn)
 
 ---
 
@@ -314,7 +344,7 @@
 
 [第五題 2024 07 jp](#第五題-2024-07-jp)
 
-### 第六題 2024 07 jp
+### 第六題 2024 07 cn
 
 答案: 4
 
@@ -330,5 +360,35 @@
 1．符合孩子年齡與喜好的繪本 2．具有教育效果的繪本
 
 3．長年受到歡迎的經典繪本 4．自己覺得有趣的繪本
+
+[第六題 2024 07 jp](#第六題-2024-07-jp)
+
+### 第七題 2024 07 cn
+
+答案: 3
+
+一位女職員和部長正在討論一款健康飲品的試作品。部長覺得這款試作品應該做什麼樣的修改？
+
+女：部長，您有喝健康飲品的試作品嗎？
+
+男：我喝了，也看了說明，以前針對年輕人的飲品很多，這次是針對高齡者開發，這個點子我覺得很新穎，很不錯。
+
+女：謝謝您。我們是為了讓高齡者也能輕鬆攝取營養，所以設計成飲用型的。
+
+男：嗯，像餅乾那種固體型對高齡者來說不太好咬，我覺得這樣改很好。但我覺得一次要喝的份量好像有點太多了，妳怎麼看？
+
+女：是的。因為我們設計成一天可以攝取足夠營養的量，跟其他公司的產品相比，容量是比較多一點。
+
+男：如果一次喝不完，可能可以考慮改成那種可以用瓶蓋蓋起來的容器，妳覺得呢？
+
+女：確實呢，我明白了。
+
+男：或許有些人會喜歡再甜一點，不過我個人覺得現在這種甜度剛好，喝起來順口，是個很有潛力的好產品，加油喔！
+
+１．改成固體類型的商品 　　２． 減少容量
+
+３．換成有蓋子的容器　　４．味道調得更甜 
+
+[第七題 2024 07 jp](#第七題-2024-07-jp)
 
 [第六題 2024 07 jp](#第六題-2024-07-jp)
