更新第八題

--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -9,6 +9,7 @@
     - [第五題 2024 07 jp](#第五題-2024-07-jp)
     - [第六題 2024 07 jp](#第六題-2024-07-jp)
     - [第七題 2024 07 jp](#第七題-2024-07-jp)
+    - [第八題 2024 07 jp](#第八題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -18,6 +19,7 @@
     - [第五題 2024 07 cn](#第五題-2024-07-cn)
     - [第六題 2024 07 cn](#第六題-2024-07-cn)
     - [第七題 2024 07 cn](#第七題-2024-07-cn)
+    - [第八題 2024 07 cn](#第八題-2024-07-cn)
 
 # 日文
 
@@ -196,6 +198,32 @@
 ３．二つ付きの容器にする　　４．味をもう少し甘くなる
 
 [第七題 2024 07 cn](#第七題-2024-07-cn)
+
+### 第八題 2024 07 jp
+
+カルチャーセンターで男の人と受付の女の人が話しています。男の人はどの講座を見学しますか。
+
+男：すみません、絵を習いたいんですが、水曜日、絵の講座は何かやっていますか？
+
+女：水曜日ですね。　イラストや油絵の講座は油絵専用の道具を使って風景を描くんですが、皆さんかなり本格的に取り組んでいらっしゃいます。
+
+男：はあ。初心者ですし、道具も持っていないので気軽にできるのがいいんですが。
+
+女：そうですね。気軽なのは色鉛筆で犬とか猫とか動物の絵を専門に描く講座があるんですけど、あいにく先生のご都合で今は開講していないんです。パソコンでイラストを描く講座はどうですか？人気ありますよ。
+
+男：パソコンで絵を描くなんてやったことないんですが、大丈夫でしょうか。
+
+女：絵を描くソフトウェアの使い方から始めるので大丈夫だと思います。パソコンやペンタブレットなどの道具はなどの道具は教室に準備してありますので次の回から始められますよ。えー、今開講している中で一番気軽に始められるのは葉書絵の講座ですけど、葉書に季節の花を描くんですが、ほかの曜日しかないんです。
+
+男：そうですが、わかりました。じゃ、すぐに始められる講座を一度見学させてもらえますか？
+
+男の人はどの講座を見学しますか。
+
+１．パソコンでイラストを描く講座　　２．油絵で風景を描く講座
+
+３．色えんぴつで動物をえがく講座　　４．はがきに季節の花をえがく講座
+
+[第八題 2024 07 cn](#第第八題-2024-07-cn)
 
 ---
 
@@ -394,3 +422,31 @@
 ３．換成有蓋子的容器　　４．味道調得更甜
 
 [第七題 2024 07 jp](#第七題-2024-07-jp)
+
+### 第八題 2024 07 cn
+
+答案: 1
+
+在文化中心，男生和櫃檯的女生正在對話。這位男生打算參觀哪一門課程？
+
+男：不好意思，我想學畫畫，請問禮拜三有什麼繪畫課程嗎？
+
+女：禮拜三啊。插畫和油畫的課程都有，不過這些課程是用油畫專用工具來畫風景，大家都非常認真地在學。
+
+男：這樣啊。我是初學者，也沒有工具，我比較想上能輕鬆學的課。
+
+女：是喔。說到輕鬆的課程的話，有一門課是用色鉛筆畫狗、貓等動物的，但很遺憾因為老師的行程，現在暫時沒有開課。那麼，您對用電腦畫插圖的課程有興趣嗎？這門課很受歡迎喔。
+
+男：用電腦畫畫我從來沒做過，這樣也可以嗎？
+
+女：課程是從教畫畫用的軟體怎麼使用開始的，所以應該沒問題。電腦和繪圖板等工具教室也都有準備好，您可以從下次課程開始參加。另外，現在正在開課的課程中最容易上手的是畫明信片的課程。內容是畫一些季節性的花，不過只在其他星期才有。
+
+男：是這樣啊，我了解了。那麼，可以讓我先參觀一下目前可以馬上開始的那門課嗎？
+
+男生打算參觀哪一門課程？
+
+１．用電腦畫插圖的課程　　２．用油畫畫風景的課程
+
+３．用色鉛筆畫動物的課程　　４．在明信片上畫季節性花卉的課程
+
+[第八題 2024 07 jp](#第八題-2024-07-jp)
