更新第九題

--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -10,6 +10,7 @@
     - [第六題 2024 07 jp](#第六題-2024-07-jp)
     - [第七題 2024 07 jp](#第七題-2024-07-jp)
     - [第八題 2024 07 jp](#第八題-2024-07-jp)
+    - [第九題 2024 07 jp](#第九題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -20,6 +21,7 @@
     - [第六題 2024 07 cn](#第六題-2024-07-cn)
     - [第七題 2024 07 cn](#第七題-2024-07-cn)
     - [第八題 2024 07 cn](#第八題-2024-07-cn)
+    - [第九題 2024 07 cn](#第九題-2024-07-cn)
 
 # 日文
 
@@ -224,6 +226,32 @@
 ３．色えんぴつで動物をえがく講座　　４．はがきに季節の花をえがく講座
 
 [第八題 2024 07 cn](#第第八題-2024-07-cn)
+
+### 第九題 2024 07 jp
+
+バネの工場で男の人と女の人が話しています。男の人は仕事の相手に何を高く評価してもらえたと言っていますか。
+
+男： 北山工業にソファのバネ、納品してきました。
+
+女： お疲れ様です。反応はどうでしたか？
+
+男： 北山工業さんの急な要望に対応できたことを、高く評価してもらえましたよ。
+おかげで、他の部品の試作品も作ってほしいって言ってもらえたんです。
+
+女： それはよかったですね。加工開始日のギリギリで設計を変更して、苦労しましたよね。
+ただ、うちの工場、デジタル化が進んだから加工にかかる時間は前より短くなりましたね。
+
+男： ええ、本当に。予定より早く納品できてよかったですよね。北山工業での品質検査、結果は明後日出るそうです。品質についても評価が高いといいですね。
+
+女：そうですね。
+
+男の人は仕事の相手に何を高く評価してもらえたと言っていますか。
+
+１．設計変更の依頼にお応じたこと　　２．試作の部品がよくできたこと
+
+３．予定より早く納品できたこと　　４．納品したばねが高品質だったこと
+
+[第九題 2024 07 cn](#第九題-2024-07-cn)
 
 ---
 
@@ -450,3 +478,29 @@
 ３．用色鉛筆畫動物的課程　　４．在明信片上畫季節性花卉的課程
 
 [第八題 2024 07 jp](#第八題-2024-07-jp)
+
+### 第九題 2024 07 cn
+
+答案: 1
+
+在彈簧工廠裡，一名男士和一名女士正在談話。男士說他在哪一方面得到了工作對象的高度評價？
+
+男： 我剛剛把沙發用的彈簧交貨給北山工業了。
+
+女： 辛苦了！對方反應如何呢？
+
+男： 他們非常肯定我們能夠應對北山工業方面的臨時需求。也因為這樣，他們還說希望我們幫忙製作其他零件的試作品。
+
+女： 那真是太好了。當時在加工開始的最後一刻才更改設計，真的很辛苦呢。不過，因為我們工廠的數位化有進展，加工所需的時間比以前短了。
+
+男： 是啊，真的。能比預定時間更早完成交貨真是太好了。北山工業的品質檢查結果好像後天會出來。希望在品質方面也能獲得好評。
+
+女： 是啊，希望如此。
+
+男生說他在哪一方面得到了工作對象的高度評價？
+
+1. 對設計變更的要求做出回應 2. 試作的零件做得很好
+
+2. 能夠比預定時間更早交貨 4. 交貨的彈簧品質很高
+
+[第九題 2024 07 jp](#第九題-2024-07-jp)
