--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -499,8 +499,8 @@
 
 男生說他在哪一方面得到了工作對象的高度評價？
 
-1. 對設計變更的要求做出回應 2. 試作的零件做得很好
+１． 對設計變更的要求做出回應 ２． 試作的零件做得很好
 
-2. 能夠比預定時間更早交貨 4. 交貨的彈簧品質很高
+３． 能夠比預定時間更早交貨 ４． 交貨的彈簧品質很高
 
 [第九題 2024 07 jp](#第九題-2024-07-jp)
