更新第十題

--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -11,6 +11,7 @@
     - [第七題 2024 07 jp](#第七題-2024-07-jp)
     - [第八題 2024 07 jp](#第八題-2024-07-jp)
     - [第九題 2024 07 jp](#第九題-2024-07-jp)
+    - [第十題 2024 07 jp](#第十題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -22,6 +23,7 @@
     - [第七題 2024 07 cn](#第七題-2024-07-cn)
     - [第八題 2024 07 cn](#第八題-2024-07-cn)
     - [第九題 2024 07 cn](#第九題-2024-07-cn)
+    - [第十題 2024 07 cn](#第十題-2024-07-cn)
 
 # 日文
 
@@ -252,6 +254,36 @@
 ３．予定より早く納品できたこと　　４．納品したばねが高品質だったこと
 
 [第九題 2024 07 cn](#第九題-2024-07-cn)
+
+### 第十題 2024 07 jp
+
+会社で男の人と部長がある宣伝動画について話しています。。部長がこの宣伝動画についての分析で一番重視しているのは何ですか。
+
+男：部長、インターネットで流している新しい化粧品の宣伝用の動画何ですが、視聴状況の分析結果、来週には出せると思います。
+
+女：あぁ、あの十代、二十代の男性をターゲットにした化粧品ね。
+
+男：はい。
+
+女：この商品、動画の制作に力を入れた分、再生回数はやっぱりきになるね。目標に達しているといいけど、あ、それから動画に他言語の字幕もつけてたよね？今後の戦略の参考にもなるから念のため、海外での再生についても分析お願いね。
+
+男：はい、視聴者に国別の再生数ですね。あとは年齢や性別も分析します。
+
+女：ええ、それからちゃんとみんな最後まで見てくれてるのかわかる？商品が最後に出てくるから最後まで見てほしいんだ。
+
+男：それも重要ですよね。調べます。
+
+女：いろんな分析項目あるけど、狙い通りの人たちが見てくれたかどうかがこの商品の運命を決めると思ってるんでよろしくね。
+
+男：はい。
+
+部長がこの宣伝動画についての分析で一番重視しているのは何ですか。
+
+１．ターゲットにした人が動画をみたか　　２．動画の再生回数
+
+３．様々な国の人に見られたか　　４．動画が最後まで見られたか
+
+[第十題 2024 07 cn](#第十題-2024-07-cn)
 
 ---
 
@@ -504,3 +536,35 @@
 ３． 能夠比預定時間更早交貨 ４． 交貨的彈簧品質很高
 
 [第九題 2024 07 jp](#第九題-2024-07-jp)
+
+### 第十題 2024 07 cn
+
+答案:1
+
+在公司裡，男職員正在和部長討論某支宣傳影片。部長在這支宣傳影片的分析中，最重視的是什麼呢？
+
+男： 部長，那支我們在網路上播放的新化妝品宣傳影片的觀看分析結果，我想下週就能交出來了。
+
+女： 啊，是那支針對十幾歲、二十幾歲男性的化妝品吧？
+
+男： 是的。
+
+女： 這個產品，我們花了很多心力在製作影片上，播放次數還是讓人在意啊。希望能達到目標。啊對了，影片裡不是也加上了多語言字幕嗎？這對今後的策略也有參考價值，所以也麻煩你分析一下海外的觀看狀況。
+
+男： 好的，要分析依據國家區分的播放數對吧？我也會分析觀眾的年齡與性別。
+
+女： 嗯，還有啊，你能知道觀眾有沒有從頭看到尾嗎？因為產品是在影片最後才出現的，我希望大家能看到最後。
+
+男： 這個也很重要呢，我會調查的。
+
+女： 雖然分析項目很多，但我認為最關鍵的，是「有沒有成功讓我們的目標對象觀看」。這點會決定這個產品的命運，就拜託你了。
+
+男： 好的。
+
+部長在這支宣傳影片的分析中最重視的是什麼？
+
+１． 目標對象是否有觀看影片　　２．影片的播放次數
+
+３．是否有被來自各個國家的人觀看　　４．影片是否有被觀看到最後
+
+[第十題 2024 07 jp](#第十題-2024-07-jp)
