拿掉多餘的句號

--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -257,7 +257,7 @@
 
 ### 第十題 2024 07 jp
 
-会社で男の人と部長がある宣伝動画について話しています。。部長がこの宣伝動画についての分析で一番重視しているのは何ですか。
+会社で男の人と部長がある宣伝動画について話しています。部長がこの宣伝動画についての分析で一番重視しているのは何ですか。
 
 男：部長、インターネットで流している新しい化粧品の宣伝用の動画何ですが、視聴状況の分析結果、来週には出せると思います。
 
