更新第十一題

--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -12,6 +12,7 @@
     - [第八題 2024 07 jp](#第八題-2024-07-jp)
     - [第九題 2024 07 jp](#第九題-2024-07-jp)
     - [第十題 2024 07 jp](#第十題-2024-07-jp)
+    - [第十一題 2024 07 jp](#第十一題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -24,6 +25,7 @@
     - [第八題 2024 07 cn](#第八題-2024-07-cn)
     - [第九題 2024 07 cn](#第九題-2024-07-cn)
     - [第十題 2024 07 cn](#第十題-2024-07-cn)
+    - [第十一題 2024 07 cn](#第十一題-2024-07-cn)
 
 # 日文
 
@@ -284,6 +286,20 @@
 ３．様々な国の人に見られたか　　４．動画が最後まで見られたか
 
 [第十題 2024 07 cn](#第十題-2024-07-cn)
+
+### 第十一題 2024 07 jp
+
+テレビで漁師が話しています。漁師は釣っても市場にでない魚の中で最も多いのはどんな魚だと言っていますか。
+
+男：漁師が釣っても市場にあまり流通しない魚があります。たとえば、サイズが規格外のものは食べにくいので、市場では不人気なんです、漁獲量が十分でないと流通に乗せにくく、反対に多く取れすぎて、売れ残る可能性が高いものも敬遠されがちです。あと、知名度が低い魚、占める割合はこれが何より大きいんすね。姿形になじみのあるもののほうにお客さんの手は伸びやすいんです。また、トゲがあって調理が面倒なもの避けられることが多いです。
+
+漁師は釣っても市場にでない魚の中で最も多いのはどんな魚だと言っていますか。
+
+１．サイズが規格外の魚　　２．売れ残るほど多く捕れてしまった魚
+
+３．一般にあまり知られていない魚　　４．調理するのが面倒な魚
+
+[第十一題 2024 07 cn](#第十一題-2024-07-cn)
 
 ---
 
@@ -568,3 +584,19 @@
 ３．是否有被來自各個國家的人觀看　　４．影片是否有被觀看到最後
 
 [第十題 2024 07 jp](#第十題-2024-07-jp)
+
+### 第十一題 2024 07 cn
+
+答案:3
+
+電視上，一位漁夫正在說話。問題是：漁夫說，在捕到但無法進入市場的魚當中，最多的是哪一種魚？
+
+男：即使是漁夫捕到的魚，也有一些不太會在市場上流通。比如說，尺寸不合規格的魚，因為不好吃，所以在市場上不受歡迎。捕獲量如果不足，就很難進入流通市場；相反地，如果捕太多，有可能賣不出去，也會被避開。還有就是，知名度低的魚，這個占比最大呢。消費者的手總是更容易伸向外型熟悉的魚。另外，有刺、料理起來麻煩的魚也經常被避開。
+
+漁夫說，在捕到但無法進入市場的魚中，最多的是哪一種魚？
+
+１．尺寸不合規格的魚　　２．多到賣不完的魚
+
+３．一般人不太知道的魚　　４．料理起來很麻煩的魚
+
+[第十一題 2024 07 jp](#第十一題-2024-07-jp)
