--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -13,6 +13,7 @@
     - [第九題 2024 07 jp](#第九題-2024-07-jp)
     - [第十題 2024 07 jp](#第十題-2024-07-jp)
     - [第十一題 2024 07 jp](#第十一題-2024-07-jp)
+    - [第十二題 2024 07 jp](#第十二題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -26,6 +27,7 @@
     - [第九題 2024 07 cn](#第九題-2024-07-cn)
     - [第十題 2024 07 cn](#第十題-2024-07-cn)
     - [第十一題 2024 07 cn](#第十一題-2024-07-cn)
+    - [第十二題 2024 07 cn](#第十二題-2024-07-cn)
 
 # 日文
 
@@ -300,6 +302,19 @@
 ３．一般にあまり知られていない魚　　４．調理するのが面倒な魚
 
 [第十一題 2024 07 cn](#第十一題-2024-07-cn)
+
+### 第十二題 2024 07 jp
+
+ラジオでアナウンサーが話しています。
+
+女：大学生の学生寮に注目が再び集まっています。四十年前は学生寮に入る人が大半でしたが、だんだんとルールが厳しい、息苦しいという理由で避けられ、一人暮らしのアパートの人気が高まりました。しかし、最近の寮は楽器練習用の部屋など、共用施設を充実させたりと魅力的になっています。寮に入りたいという人が定員を超え、抽選までしている寮もあります。また、食事付き、職員は常駐の寮もあり、初めて一人暮らしをする学生にとっては、いつも頼れる大人がいるという安全面の利点があります。さらに、食事の提供があることも安心感に繋がっているようです。
+
+アナウンサーは主に何について話しています。
+
+１．学生寮のルールの変化　　２．学生寮の人気が復活した理由
+３．一人暮らしの学生が心配していること　　４．一人暮らしの学生に人気がある食事
+
+[第十二題 2024 07 cn](#第十二題-2024-07-cn)
 
 ---
 
@@ -600,3 +615,18 @@
 ３．一般人不太知道的魚　　４．料理起來很麻煩的魚
 
 [第十一題 2024 07 jp](#第十一題-2024-07-jp)
+
+### 第十二題 2024 07 cn
+
+答案:2
+
+廣播中播音員正在說話。
+
+女播音員：大學生宿舍再度受到關注。四十年前，大多數人都會住進學生宿舍，但隨著時間推移，由於宿舍規定嚴格、讓人感到壓迫，因此逐漸被避開，反而一人居住的公寓變得更受歡迎。不過，近來的宿舍變得更具吸引力，例如設有樂器練習室等公共設施十分完善。有些宿舍甚至因為申請人數超過名額，還得進行抽籤。還有附餐、職員常駐的宿舍，對於首次獨自生活的大學生來說，有可靠的大人隨時在身邊，是一種安全保障。此外，有提供餐食這一點，似乎也能帶來安心感。
+
+播音員主要是在談論什麼？
+
+１．學生宿舍規定的變化　２．學生宿舍人氣回升的原因
+３．獨居學生擔心的事情　　４．受獨居學生歡迎的餐點
+
+[第十二題 2024 07 jp](#第十二題-2024-07-jp)
