更新第十三題

--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -14,6 +14,7 @@
     - [第十題 2024 07 jp](#第十題-2024-07-jp)
     - [第十一題 2024 07 jp](#第十一題-2024-07-jp)
     - [第十二題 2024 07 jp](#第十二題-2024-07-jp)
+    - [第十三題 2024 07 jp](#第十三題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -28,6 +29,7 @@
     - [第十題 2024 07 cn](#第十題-2024-07-cn)
     - [第十一題 2024 07 cn](#第十一題-2024-07-cn)
     - [第十二題 2024 07 cn](#第十二題-2024-07-cn)
+    - [第十三題 2024 07 cn](#第十三題-2024-07-cn)
 
 # 日文
 
@@ -315,6 +317,19 @@
 ３．一人暮らしの学生が心配していること　　４．一人暮らしの学生に人気がある食事
 
 [第十二題 2024 07 cn](#第十二題-2024-07-cn)
+
+### 第十三題 2024 07 jp
+
+ビジネスセミナーで社長が話しています。
+
+女：えー、私は「種を蒔く」という言葉が好きです。「大きな花を咲かせたいと思うならまず、種を蒔くことだ。そして芽が出るまで待つことを楽しめ」と会社経営をしていた亡き父が教えてくれました。昔段は無口でほとんど話さない人だったんですが、私が最初の事業でつまずいた時、そう声をかけてくれました。私は学生時代からいくつもの事業を手掛けていますが、リスクもありますし、うまくいかないこともあります。そんな時、いつも父の言葉に励まされてきました。これからも新たな土地を耕して、種を蒔き続けていこうと思っています。
+
+社長は何についてはなしていますか。
+
+１．自分にとっての心の支え　　２．父から引き継いだ事業
+３．起業する時のリスク　　４．会社を始めたきっかけ
+
+[第十三題 2024 07 cn](#第十三題-2024-07-cn)
 
 ---
 
@@ -630,3 +645,18 @@
 ３．獨居學生擔心的事情　　４．受獨居學生歡迎的餐點
 
 [第十二題 2024 07 jp](#第十二題-2024-07-jp)
+
+### 第十三題 2024 07 cn
+
+答案:1
+
+在商業研討會上，社長正在發言。
+
+女：嗯……我很喜歡「播種」這個詞。經營公司的已故父親曾經告訴我：「如果你想讓大花綻放，那就得先播種，並享受等待發芽的過程。」我父親以前很寡言，幾乎不太說話，但當我在第一次創業時遇到挫折，他就是這樣鼓勵我的。我從學生時代開始就涉足了多個事業，這當中也伴隨著風險，當然也有不順利的時候。在那樣的時候，我總是受到父親這句話的鼓舞。今後我也想繼續耕耘新的土地，不斷播下種子。
+
+社長正在談論的是什麼？
+
+１．對自己來說的精神支柱　　２．從父親那裡繼承的事業
+３．創業時的風險　　４．創立公司的契機
+
+[第十三題 2024 07 jp](#第十三題-2024-07-jp)
