更新第十四題

--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -15,6 +15,7 @@
     - [第十一題 2024 07 jp](#第十一題-2024-07-jp)
     - [第十二題 2024 07 jp](#第十二題-2024-07-jp)
     - [第十三題 2024 07 jp](#第十三題-2024-07-jp)
+    - [第十四題 2024 07 jp](#第十四題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -30,6 +31,7 @@
     - [第十一題 2024 07 cn](#第十一題-2024-07-cn)
     - [第十二題 2024 07 cn](#第十二題-2024-07-cn)
     - [第十三題 2024 07 cn](#第十三題-2024-07-cn)
+    - [第十四題 2024 07 cn](#第十四題-2024-07-cn)
 
 # 日文
 
@@ -330,6 +332,19 @@
 ３．起業する時のリスク　　４．会社を始めたきっかけ
 
 [第十三題 2024 07 cn](#第十三題-2024-07-cn)
+
+### 第十四題 2024 07 jp
+
+ラジオでカーテンのメーカーの人が話しています。
+
+女：日光が部屋を入るのを遮ったり、外から見えないようにするためにカーテンは欠かせませんよね。日本では古くから安く手軽に手に入れられる木や紙で作ったふすまや障子をカーテンのように用いてきました。カーテンが日本で広く使われるようになったのは、西洋的なライフスタイルが始まった昭和三十年代以降です。当時の日本は急激な経済成長に伴って、団地やアパートなどが次々と建てられるようになり、洋風にデザインされた住まいが一気に増えたからです。それ以降、カーテンは私たちの生活に浸透しました。
+
+カーテンのメーカーの人は何について話していますか。
+
+１．カーテンの素材の発展　　２．日本らしいカーテンのデザイン
+３．カーテンの値段の変化　　４．日本におけるカーテンの普及
+
+[第十四題 2024 07 cn](#第十四題-2024-07-cn)
 
 ---
 
@@ -660,3 +675,20 @@
 ３．創業時的風險　　４．創立公司的契機
 
 [第十三題 2024 07 jp](#第十三題-2024-07-jp)
+
+### 第十四題 2024 07 cn
+
+答案:4
+
+廣播中，窗簾製造商正在發言。
+
+女：為了遮擋陽光進入房間，或防止從外面看進來，窗簾是不可或缺的吧。在日本，自古以來人們就用便宜又容易取得的木頭和紙製作的「隔扇」或「拉門」來代替窗簾使用。
+窗簾在日本廣泛使用，是從昭和三十年代（約 1955 年之後）西式生活開始普及之後的事。
+當時的日本，由於經濟快速成長，集合住宅、公寓等建築接連被興建，西式設計的住家迅速增加。也正因如此，窗簾逐漸融入了我們的日常生活。
+
+窗簾製造商正在談論什麼？
+
+１．窗簾材質的發展　　２．具有日本風格的窗簾設計
+３．窗簾價格的變化　　４．窗簾在日本的普及情況
+
+[第十四題 2024 07 jp](#第十四題-2024-07-jp)
