更新第十五題

--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -16,6 +16,7 @@
     - [第十二題 2024 07 jp](#第十二題-2024-07-jp)
     - [第十三題 2024 07 jp](#第十三題-2024-07-jp)
     - [第十四題 2024 07 jp](#第十四題-2024-07-jp)
+    - [第十五題 2024 07 jp](#第十五題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -32,6 +33,7 @@
     - [第十二題 2024 07 cn](#第十二題-2024-07-cn)
     - [第十三題 2024 07 cn](#第十三題-2024-07-cn)
     - [第十四題 2024 07 cn](#第十四題-2024-07-cn)
+    - [第十五題 2024 07 cn](#第十五題-2024-07-cn)
 
 # 日文
 
@@ -345,6 +347,19 @@
 ３．カーテンの値段の変化　　４．日本におけるカーテンの普及
 
 [第十四題 2024 07 cn](#第十四題-2024-07-cn)
+
+### 第十五題 2024 07 jp
+
+テレビで作家が話しています。
+
+女：私にとって桜町は第二の故郷です。私の小説の舞台としてこの町の商店街やお寺、坂道をしばしば登場させていますが、実は私がここで過ごしたのは学生時代の四年にすぎません。親元を離れて暮らした四年間は実に濃く、青春そのものでした。思い出深い場所が数えきれほどあります。十年代、二十年代を主人公に物語を書く時、その背景には自然とこの町が存在しているんです。
+
+作家は何について話していますか。
+
+１．自分にとって特別な町　　２．学生時代の経験
+３．自分が生まれた故郷　　４．桜町の美しさ
+
+[第十五題 2024 07 cn](#第十五題-2024-07-cn)
 
 ---
 
@@ -692,3 +707,18 @@
 ３．窗簾價格的變化　　４．窗簾在日本的普及情況
 
 [第十四題 2024 07 jp](#第十四題-2024-07-jp)
+
+### 第十五題 2024 07 cn
+
+答案:1
+
+電視上作家正在說話。
+
+女：對我來說，櫻町是第二個故鄉。我常常在小說的舞台中描寫這個小鎮的商店街、寺廟與坡道，但其實我在這裡度過的時間只有學生時代的四年而已。離開父母獨自生活的那四年過得非常充實，完全就是我的青春。這裡有數不清讓我印象深刻的地方。當我創作以十幾歲、二十幾歲為主角的故事時，背景自然而然就會是這個小鎮。
+
+作家在談論什麼？
+
+１．對自己而言特別的小鎮　　２．學生時代的經歷
+３．自己出生的故鄉　　４．櫻町的美麗
+
+[第十五題 2024 07 jp](#第十五題-2024-07-jp)
