--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -17,6 +17,7 @@
     - [第十三題 2024 07 jp](#第十三題-2024-07-jp)
     - [第十四題 2024 07 jp](#第十四題-2024-07-jp)
     - [第十五題 2024 07 jp](#第十五題-2024-07-jp)
+    - [第十六題 2024 07 jp](#第十六題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -34,6 +35,7 @@
     - [第十三題 2024 07 cn](#第十三題-2024-07-cn)
     - [第十四題 2024 07 cn](#第十四題-2024-07-cn)
     - [第十五題 2024 07 cn](#第十五題-2024-07-cn)
+    - [第十六題 2024 07 cn](#第十六題-2024-07-cn)
 
 # 日文
 
@@ -360,6 +362,19 @@
 ３．自分が生まれた故郷　　４．桜町の美しさ
 
 [第十五題 2024 07 cn](#第十五題-2024-07-cn)
+
+### 第十六題 2024 07 jp
+
+[第十六題 2024 07 cn](#第十六題-2024-07-cn)
+
+科学館で恐竜の研究者が話しています。
+
+女：十年前、みどり市で恐竜の化石が発見されましたが、「この恐竜が何を食べていたのか」ということはこれまでわかっていませんでした。仮に植物を食べる植物食だとして、どういう植物を食べでいたのか、私たち研究グルーブはこの恐竜の歯の化石の表面の微かな凹凸を最新の技術で分析しました。そして、爬虫類の歯と比べたのです。例えば、爬虫類の動物に虫、植物などを食べさせた時、歯に付く細かい傷は食べたものによって異なります。その違いを分析し、この恐竜の歯の化石の表面に当てはめて考えることで、恐竜がどういったものを食べていたのかを具体的に推測できるようになったのです。
+
+研究者はこの恐竜の何について話していますか。
+
+１．食べ物の食べ方　　２．食事をしていた場所の特徴
+３．生きていた時代の環境　４．食べていたものの調査方法
 
 ---
 
@@ -722,3 +737,7 @@
 ３．自己出生的故鄉　　４．櫻町的美麗
 
 [第十五題 2024 07 jp](#第十五題-2024-07-jp)
+
+### 第十六題 2024 07 cn
+
+[第十六題 2024 07 jp](#第十六題-2024-07-jp)
