--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -369,7 +369,7 @@
 
 科学館で恐竜の研究者が話しています。
 
-女：十年前、みどり市で恐竜の化石が発見されましたが、「この恐竜が何を食べていたのか」ということはこれまでわかっていませんでした。仮に植物を食べる植物食だとして、どういう植物を食べでいたのか、私たち研究グルーブはこの恐竜の歯の化石の表面の微かな凹凸を最新の技術で分析しました。そして、爬虫類の歯と比べたのです。例えば、爬虫類の動物に虫、植物などを食べさせた時、歯に付く細かい傷は食べたものによって異なります。その違いを分析し、この恐竜の歯の化石の表面に当てはめて考えることで、恐竜がどういったものを食べていたのかを具体的に推測できるようになったのです。
+女：十年前、みどり市で恐竜の化石が発見されましたが、「この恐竜が何を食べていたのか」ということはこれまでわかっていませんでした。仮に植物を食べる植物食だとして、どういう植物を食べていたのか、私たち研究グループはこの恐竜の歯の化石の表面の微かな凹凸を最新の技術で分析しました。そして、爬虫類の歯と比べたのです。例えば、爬虫類の動物に虫、植物などを食べさせた時、歯に付く細かい傷は食べたものによって異なります。その違いを分析し、この恐竜の歯の化石の表面に当てはめて考えることで、恐竜がどういったものを食べていたのかを具体的に推測できるようになったのです。
 
 研究者はこの恐竜の何について話していますか。
 
@@ -739,5 +739,17 @@
 [第十五題 2024 07 jp](#第十五題-2024-07-jp)
 
 ### 第十六題 2024 07 cn
+
+答案:4
+
+在科學館裡，一位恐龍研究者正在說話。
+
+女:十年前，在綠市發現了一具恐龍的化石，但「這隻恐龍吃什麼」這件事一直到現在都還不清楚。
+假設牠是吃植物的草食性恐龍，我們研究小組便想進一步知道牠吃的是哪一類植物，於是就利用最新技術，分析了這隻恐龍牙齒化石表面的微小凹凸痕跡。接著，我們將這些痕跡和爬蟲類的牙齒進行了比較。例如，讓爬蟲類動物吃昆蟲或植物時，牙齒上會出現細微的刮痕，而這些刮痕會根據所吃的東西有所不同。我們分析這些差異，再套用到這隻恐龍的牙齒化石表面，這樣就能具體推測出這隻恐龍到底吃了哪些東西。
+
+研究者是在談論這隻恐龍的什麼呢？
+
+１．食物的吃法 ２．進食地點的特徵
+３．生存時代的環境 ４．對其食物的調查方法
 
 [第十六題 2024 07 jp](#第十六題-2024-07-jp)
