--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -18,6 +18,7 @@
     - [第十四題 2024 07 jp](#第十四題-2024-07-jp)
     - [第十五題 2024 07 jp](#第十五題-2024-07-jp)
     - [第十六題 2024 07 jp](#第十六題-2024-07-jp)
+    - [第十七題 2024 07 jp](#第十七題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -36,6 +37,7 @@
     - [第十四題 2024 07 cn](#第十四題-2024-07-cn)
     - [第十五題 2024 07 cn](#第十五題-2024-07-cn)
     - [第十六題 2024 07 cn](#第十六題-2024-07-cn)
+    - [第十七題 2024 07 cn](#第十七題-2024-07-cn)
 
 # 日文
 
@@ -365,8 +367,6 @@
 
 ### 第十六題 2024 07 jp
 
-[第十六題 2024 07 cn](#第十六題-2024-07-cn)
-
 科学館で恐竜の研究者が話しています。
 
 女：十年前、みどり市で恐竜の化石が発見されましたが、「この恐竜が何を食べていたのか」ということはこれまでわかっていませんでした。仮に植物を食べる植物食だとして、どういう植物を食べていたのか、私たち研究グループはこの恐竜の歯の化石の表面の微かな凹凸を最新の技術で分析しました。そして、爬虫類の歯と比べたのです。例えば、爬虫類の動物に虫、植物などを食べさせた時、歯に付く細かい傷は食べたものによって異なります。その違いを分析し、この恐竜の歯の化石の表面に当てはめて考えることで、恐竜がどういったものを食べていたのかを具体的に推測できるようになったのです。
@@ -375,6 +375,18 @@
 
 １．食べ物の食べ方　　２．食事をしていた場所の特徴
 ３．生きていた時代の環境　４．食べていたものの調査方法
+
+[第十六題 2024 07 cn](#第十六題-2024-07-cn)
+
+### 第十七題 2024 07 jp
+
+女：今日の授業のレポート、そう簡単には書けそうもないよね。
+
+１．大変だけどやるしかないよ。
+２．難しいと思ってないの？
+３．本当、簡単で助かるよね。
+
+[第十七題 2024 07 cn](#第十七題-2024-07-cn)
 
 ---
 
@@ -753,3 +765,15 @@
 ３．生存時代的環境 ４．對其食物的調查方法
 
 [第十六題 2024 07 jp](#第十六題-2024-07-jp)
+
+### 第十七題 2024 07 cn
+
+答案:1
+
+女:今天課堂的報告，看起來好像沒那麼容易寫得出來呢。
+
+１．雖然很辛苦，但也只能硬著頭皮做了。
+２．你不覺得很難嗎？
+３．真的，這麼簡單真是幫了大忙呢。
+
+[第十七題 2024 07 jp](#第十七題-2024-07-jp)
