--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -19,6 +19,7 @@
     - [第十五題 2024 07 jp](#第十五題-2024-07-jp)
     - [第十六題 2024 07 jp](#第十六題-2024-07-jp)
     - [第十七題 2024 07 jp](#第十七題-2024-07-jp)
+    - [第十八題 2024 07 jp](#第十八題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -38,6 +39,7 @@
     - [第十五題 2024 07 cn](#第十五題-2024-07-cn)
     - [第十六題 2024 07 cn](#第十六題-2024-07-cn)
     - [第十七題 2024 07 cn](#第十七題-2024-07-cn)
+    - [第十八題 2024 07 cn](#第十八題-2024-07-cn)
 
 # 日文
 
@@ -387,6 +389,16 @@
 ３．本当、簡単で助かるよね。
 
 [第十七題 2024 07 cn](#第十七題-2024-07-cn)
+
+### 第十八題 2024 07 jp
+
+男：僕こないだから和田さんと揉めてて。
+
+１．二人で楽しそうだね。
+２．仲直りしたんだ
+３．何で？何があったの？
+
+[第十八題 2024 07 cn](#第十八題-2024-07-cn)
 
 ---
 
@@ -777,3 +789,15 @@
 ３．真的，這麼簡單真是幫了大忙呢。
 
 [第十七題 2024 07 jp](#第十七題-2024-07-jp)
+
+### 第十八題 2024 07 cn
+
+答案:3
+
+男：我從前陣子開始就跟和田有點爭執。
+
+１．你們兩個看起來很開心呢。
+２．你們和好了啊。
+３．怎麼了？發生什麼事？
+
+[第十八題 2024 07 jp](#第十八題-2024-07-jp)
