--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -20,6 +20,7 @@
     - [第十六題 2024 07 jp](#第十六題-2024-07-jp)
     - [第十七題 2024 07 jp](#第十七題-2024-07-jp)
     - [第十八題 2024 07 jp](#第十八題-2024-07-jp)
+    - [第十九題 2024 07 jp](#第十九題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -40,6 +41,7 @@
     - [第十六題 2024 07 cn](#第十六題-2024-07-cn)
     - [第十七題 2024 07 cn](#第十七題-2024-07-cn)
     - [第十八題 2024 07 cn](#第十八題-2024-07-cn)
+    - [第十九題 2024 07 cn](#第十九題-2024-07-cn)
 
 # 日文
 
@@ -399,6 +401,16 @@
 ３．何で？何があったの？
 
 [第十八題 2024 07 cn](#第十八題-2024-07-cn)
+
+### 第十九題 2024 07 jp
+
+女：さっき見た映画の最後のシーン、私、胸を打たれた。
+
+１．どうしてワクワクしたの？
+２．僕もあのシーン意味不明だったよ
+３．感動的だったよね。
+
+[第十九題 2024 07 cn](#第十九題-2024-07-cn)
 
 ---
 
@@ -801,3 +813,15 @@
 ３．怎麼了？發生什麼事？
 
 [第十八題 2024 07 jp](#第十八題-2024-07-jp)
+
+### 第十九題 2024 07 cn
+
+答案:3
+
+女:剛才看的那部電影的最後一幕，真的讓我非常感動。
+
+１．為什麼讓你興奮呢？
+２．我也覺得那一幕莫名其妙耶。
+３．真的很感人呢。
+
+[第十九題 2024 07 jp](#第十九題-2024-07-jp)
