--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -21,6 +21,7 @@
     - [第十七題 2024 07 jp](#第十七題-2024-07-jp)
     - [第十八題 2024 07 jp](#第十八題-2024-07-jp)
     - [第十九題 2024 07 jp](#第十九題-2024-07-jp)
+    - [第二十題 2024 07 jp](#第二十題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -42,6 +43,7 @@
     - [第十七題 2024 07 cn](#第十七題-2024-07-cn)
     - [第十八題 2024 07 cn](#第十八題-2024-07-cn)
     - [第十九題 2024 07 cn](#第十九題-2024-07-cn)
+    - [第二十題 2024 07 cn](#第二十題-2024-07-cn)
 
 # 日文
 
@@ -411,6 +413,16 @@
 ３．感動的だったよね。
 
 [第十九題 2024 07 cn](#第十九題-2024-07-cn)
+
+### 第二十題 2024 07 jp
+
+男：お昼の定食で飲んだサービスのコーヒー、飲めたもんじゃなかったね。
+
+１．もっと飲めばよかったね。
+２．確かにあれはおいしいかったね。
+３．ちょっとひどかったよね。
+
+[第二十題 2024 07 cn](#第二十題-2024-07-cn)
 
 ---
 
@@ -825,3 +837,15 @@
 ３．真的很感人呢。
 
 [第十九題 2024 07 jp](#第十九題-2024-07-jp)
+
+### 第二十題 2024 07 cn
+
+答案: 3
+
+男:午餐定食附的那杯免費咖啡，根本難以下嚥啊。
+
+１．早知道多喝一點就好了呢。
+２．的確，那個真的很好喝呢。
+３．真的有點糟糕呢。
+
+[第二十題 2024 07 jp](#第二十題-2024-07-jp)
