--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -22,6 +22,7 @@
     - [第十八題 2024 07 jp](#第十八題-2024-07-jp)
     - [第十九題 2024 07 jp](#第十九題-2024-07-jp)
     - [第二十題 2024 07 jp](#第二十題-2024-07-jp)
+    - [第二十一題 2024 07 jp](#第二十一題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -44,6 +45,7 @@
     - [第十八題 2024 07 cn](#第十八題-2024-07-cn)
     - [第十九題 2024 07 cn](#第十九題-2024-07-cn)
     - [第二十題 2024 07 cn](#第二十題-2024-07-cn)
+    - [第二十一題 2024 07 cn](#第二十一題-2024-07-cn)
 
 # 日文
 
@@ -424,7 +426,15 @@
 
 [第二十題 2024 07 cn](#第二十題-2024-07-cn)
 
----
+### 第二十一題 2024 07 jp
+
+男：森さんのことだから遅刻するはずないのに来ないね
+
+１．いいかげん、ちゃんとしてほしいよね。
+２．森さんってよく遅刻するんだ。
+３．遅れるなんてどうしたんだろう？
+
+## [第二十一題 2024 07 cn](#第二十一題-2024-07-cn)
 
 # 中文
 
@@ -849,3 +859,15 @@
 ３．真的有點糟糕呢。
 
 [第二十題 2024 07 jp](#第二十題-2024-07-jp)
+
+### 第二十一題 2024 07 cn
+
+答案: 3
+
+男：以森先生的個性來說應該不會遲到的，但他卻還沒來呢。
+
+１．夠了啦，希望他該好好一點。
+２．原來森先生常常遲到啊。
+３．他竟然會遲到，是不是出什麼事了啊？
+
+[第二十一題 2024 07 jp](#第二十一題-2024-07-jp)
