--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -23,6 +23,7 @@
     - [第十九題 2024 07 jp](#第十九題-2024-07-jp)
     - [第二十題 2024 07 jp](#第二十題-2024-07-jp)
     - [第二十一題 2024 07 jp](#第二十一題-2024-07-jp)
+    - [第二十二題 2024 07 jp](#第二十二題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -46,6 +47,7 @@
     - [第十九題 2024 07 cn](#第十九題-2024-07-cn)
     - [第二十題 2024 07 cn](#第二十題-2024-07-cn)
     - [第二十一題 2024 07 cn](#第二十一題-2024-07-cn)
+    - [第二十二題 2024 07 cn](#第二十二題-2024-07-cn)
 
 # 日文
 
@@ -435,6 +437,18 @@
 ３．遅れるなんてどうしたんだろう？
 
 ## [第二十一題 2024 07 cn](#第二十一題-2024-07-cn)
+
+### 第二十二題 2024 07 jp
+
+男：昨日のサークルの部員同士の言い合い、先輩に報告するまでもないよね。
+
+１．え？先輩に言うんだね。
+２．必要ないよね。
+３．報告した方がいいってことね。
+
+## [第二十二題 2024 07 cn](#第二十二題-2024-07-cn)
+
+---
 
 # 中文
 
@@ -866,8 +880,20 @@
 
 男：以森先生的個性來說應該不會遲到的，但他卻還沒來呢。
 
-１．夠了啦，希望他該好好一點。
+１．也該認真點了吧。
 ２．原來森先生常常遲到啊。
 ３．他竟然會遲到，是不是出什麼事了啊？
 
 [第二十一題 2024 07 jp](#第二十一題-2024-07-jp)
+
+### 第二十二題 2024 07 cn
+
+答案: 2
+
+男：昨天社員之間的爭吵，不至於還要報告給學長吧？
+
+１．咦？你是打算跟學長說啊？
+２．沒這個必要吧。
+３．你是覺得應該要報告比較好對吧。
+
+[第二十二題 2024 07 jp](#第二十二題-2024-07-jp)
