--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -24,6 +24,7 @@
     - [第二十題 2024 07 jp](#第二十題-2024-07-jp)
     - [第二十一題 2024 07 jp](#第二十一題-2024-07-jp)
     - [第二十二題 2024 07 jp](#第二十二題-2024-07-jp)
+    - [第二十三題 2024 07 jp](#第二十三題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -48,6 +49,7 @@
     - [第二十題 2024 07 cn](#第二十題-2024-07-cn)
     - [第二十一題 2024 07 cn](#第二十一題-2024-07-cn)
     - [第二十二題 2024 07 cn](#第二十二題-2024-07-cn)
+    - [第二十三題 2024 07 cn](#第二十三題-2024-07-cn)
 
 # 日文
 
@@ -447,6 +449,16 @@
 ３．報告した方がいいってことね。
 
 ## [第二十二題 2024 07 cn](#第二十二題-2024-07-cn)
+
+### 第二十三題 2024 07 jp
+
+男：昨日うちの学校の柔道の試合、見に行ったんだけど、負けはしないかハラハラしたよ。
+
+１．何とか勝てたんだ。
+２．負けちゃって残念だったね。
+３．余裕で勝ったんだね。
+
+## [第二十三題 2024 07 cn](#第二十三題-2024-07-cn)
 
 ---
 
@@ -897,3 +909,15 @@
 ３．你是覺得應該要報告比較好對吧。
 
 [第二十二題 2024 07 jp](#第二十二題-2024-07-jp)
+
+### 第二十三題 2024 07 cn
+
+答案: 1
+
+男：昨天我去看了我們學校的柔道比賽，緊張到怕會輸呢。
+
+１．總算贏了啊!
+２．輸了真可惜啊!
+３．輕鬆就贏了啊!
+
+[第二十三題 2024 07 jp](#第二十三題-2024-07-jp)
