--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -25,6 +25,7 @@
     - [第二十一題 2024 07 jp](#第二十一題-2024-07-jp)
     - [第二十二題 2024 07 jp](#第二十二題-2024-07-jp)
     - [第二十三題 2024 07 jp](#第二十三題-2024-07-jp)
+    - [第二十四題 2024 07 jp](#第二十四題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -50,6 +51,7 @@
     - [第二十一題 2024 07 cn](#第二十一題-2024-07-cn)
     - [第二十二題 2024 07 cn](#第二十二題-2024-07-cn)
     - [第二十三題 2024 07 cn](#第二十三題-2024-07-cn)
+    - [第二十四題 2024 07 cn](#第二十四題-2024-07-cn)
 
 # 日文
 
@@ -459,6 +461,16 @@
 ３．余裕で勝ったんだね。
 
 ## [第二十三題 2024 07 cn](#第二十三題-2024-07-cn)
+
+### 第二十四題 2024 07 jp
+
+男：課長、桜社への商品説明、私の担当なんですが、ご一緒願えないでしょうか。
+
+１．かまいませんよ、行きますよ。
+２．担当者が行かないのはまずいでしょう。
+３．私が代わりに行くんですね。
+
+## [第二十四題 2024 07 cn](#第二十四題-2024-07-cn)
 
 ---
 
@@ -921,3 +933,15 @@
 ３．輕鬆就贏了啊!
 
 [第二十三題 2024 07 jp](#第二十三題-2024-07-jp)
+
+### 第二十四題 2024 07 cn
+
+答案: 1
+
+男：課長，關於對櫻花公司的商品說明，是我負責的，不知道您能否一起去呢？
+
+１．沒問題喔，我會去的。
+２．負責人不去的話會很不好吧？
+３．是要我代替你去嗎？
+
+[第二十四題 2024 07 jp](#第二十四題-2024-07-jp)
