更新第二十五題

--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -26,6 +26,7 @@
     - [第二十二題 2024 07 jp](#第二十二題-2024-07-jp)
     - [第二十三題 2024 07 jp](#第二十三題-2024-07-jp)
     - [第二十四題 2024 07 jp](#第二十四題-2024-07-jp)
+    - [第二十五題 2024 07 jp](#第二十五題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -52,6 +53,7 @@
     - [第二十二題 2024 07 cn](#第二十二題-2024-07-cn)
     - [第二十三題 2024 07 cn](#第二十三題-2024-07-cn)
     - [第二十四題 2024 07 cn](#第二十四題-2024-07-cn)
+    - [第二十五題 2024 07 cn](#第二十五題-2024-07-cn)
 
 # 日文
 
@@ -471,6 +473,16 @@
 ３．私が代わりに行くんですね。
 
 ## [第二十四題 2024 07 cn](#第二十四題-2024-07-cn)
+
+### 第二十五題 2024 07 jp
+
+男：加藤さん、データの分析は木村さんにかなう人はいないよね。
+
+１．え？木村さんさっぱりわかってないの？
+２．木村さんが一番詳しいと思う。
+３．木村さん、データの分析は苦手らしいね。
+
+## [第二十五題 2024 07 cn](#第二十五題-2024-07-cn)
 
 ---
 
@@ -945,3 +957,15 @@
 ３．是要我代替你去嗎？
 
 [第二十四題 2024 07 jp](#第二十四題-2024-07-jp)
+
+### 第二十五題 2024 07 cn
+
+答案: 2
+
+男：加藤小姐，在資料分析方面，沒有人能比得上木村先生吧。
+
+１．咦？木村先生完全不懂嗎？
+２．我也覺得木村先生最了解。
+３．聽說木村先生不擅長分析數據耶。
+
+[第二十五題 2024 07 jp](#第二十五題-2024-07-jp)
