--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -27,6 +27,7 @@
     - [第二十三題 2024 07 jp](#第二十三題-2024-07-jp)
     - [第二十四題 2024 07 jp](#第二十四題-2024-07-jp)
     - [第二十五題 2024 07 jp](#第二十五題-2024-07-jp)
+    - [第二十六題 2024 07 jp](#第二十六題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -54,6 +55,7 @@
     - [第二十三題 2024 07 cn](#第二十三題-2024-07-cn)
     - [第二十四題 2024 07 cn](#第二十四題-2024-07-cn)
     - [第二十五題 2024 07 cn](#第二十五題-2024-07-cn)
+    - [第二十六題 2024 07 cn](#第二十六題-2024-07-cn)
 
 # 日文
 
@@ -483,6 +485,16 @@
 ３．木村さん、データの分析は苦手らしいね。
 
 ## [第二十五題 2024 07 cn](#第二十五題-2024-07-cn)
+
+### 第二十六題 2024 07 jp
+
+男：課長に急にイベントの手伝い頼まれたけど、断るに断れなかったよ。
+
+１．頼まれたら断れないよね。
+２．頼まれたのに断ったんだ。
+３．本当は断りたくなかったんだね。
+
+## [第二十六題 2024 07 cn](#第二十六題-2024-07-cn)
 
 ---
 
@@ -969,3 +981,15 @@
 ３．聽說木村先生不擅長分析數據耶。
 
 [第二十五題 2024 07 jp](#第二十五題-2024-07-jp)
+
+### 第二十六題 2024 07 cn
+
+答案: 1
+
+男：課長突然叫我幫忙活動，雖然想拒絕，但也不好意思拒絕啊。
+
+１．被拜託的話，真的很難拒絕耶。
+２．明明被拜託了，你還是拒絕了啊？
+３．你其實是不想拒絕吧？
+
+[第二十六題 2024 07 jp](#第二十六題-2024-07-jp)
