--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -28,6 +28,7 @@
     - [第二十四題 2024 07 jp](#第二十四題-2024-07-jp)
     - [第二十五題 2024 07 jp](#第二十五題-2024-07-jp)
     - [第二十六題 2024 07 jp](#第二十六題-2024-07-jp)
+    - [第二十七題 2024 07 jp](#第二十七題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -56,6 +57,7 @@
     - [第二十四題 2024 07 cn](#第二十四題-2024-07-cn)
     - [第二十五題 2024 07 cn](#第二十五題-2024-07-cn)
     - [第二十六題 2024 07 cn](#第二十六題-2024-07-cn)
+    - [第二十七題 2024 07 cn](#第二十七題-2024-07-cn)
 
 # 日文
 
@@ -444,7 +446,7 @@
 ２．森さんってよく遅刻するんだ。
 ３．遅れるなんてどうしたんだろう？
 
-## [第二十一題 2024 07 cn](#第二十一題-2024-07-cn)
+[第二十一題 2024 07 cn](#第二十一題-2024-07-cn)
 
 ### 第二十二題 2024 07 jp
 
@@ -454,7 +456,7 @@
 ２．必要ないよね。
 ３．報告した方がいいってことね。
 
-## [第二十二題 2024 07 cn](#第二十二題-2024-07-cn)
+[第二十二題 2024 07 cn](#第二十二題-2024-07-cn)
 
 ### 第二十三題 2024 07 jp
 
@@ -464,7 +466,7 @@
 ２．負けちゃって残念だったね。
 ３．余裕で勝ったんだね。
 
-## [第二十三題 2024 07 cn](#第二十三題-2024-07-cn)
+[第二十三題 2024 07 cn](#第二十三題-2024-07-cn)
 
 ### 第二十四題 2024 07 jp
 
@@ -474,7 +476,7 @@
 ２．担当者が行かないのはまずいでしょう。
 ３．私が代わりに行くんですね。
 
-## [第二十四題 2024 07 cn](#第二十四題-2024-07-cn)
+[第二十四題 2024 07 cn](#第二十四題-2024-07-cn)
 
 ### 第二十五題 2024 07 jp
 
@@ -484,7 +486,7 @@
 ２．木村さんが一番詳しいと思う。
 ３．木村さん、データの分析は苦手らしいね。
 
-## [第二十五題 2024 07 cn](#第二十五題-2024-07-cn)
+[第二十五題 2024 07 cn](#第二十五題-2024-07-cn)
 
 ### 第二十六題 2024 07 jp
 
@@ -494,7 +496,17 @@
 ２．頼まれたのに断ったんだ。
 ３．本当は断りたくなかったんだね。
 
-## [第二十六題 2024 07 cn](#第二十六題-2024-07-cn)
+[第二十六題 2024 07 cn](#第二十六題-2024-07-cn)
+
+### 第二十七題 2024 07 jp
+
+男：新人の渡辺さん、先月の営業成績、ベテランの課長に迫る勢いだったって。
+
+１．課長の成績には全然届かないんだね。
+２．あと少しで課長を抜くぐらいだったんだ。
+３．課長を超える結果だなんてすごいね。
+
+[第二十七題 2024 07 cn](#第二十七題-2024-07-cn)
 
 ---
 
@@ -993,3 +1005,15 @@
 ３．你其實是不想拒絕吧？
 
 [第二十六題 2024 07 jp](#第二十六題-2024-07-jp)
+
+### 第二十七題 2024 07 cn
+
+答案: 2
+
+男：聽說新人渡邊先生上個月的業績快要追上資深的課長了耶。
+
+１．完全沒到課長那個程度。
+２．差一點就超過課長了啊。
+３．竟然超過課長的成績，太厲害了！
+
+[第二十七題 2024 07 jp](#第二十七題-2024-07-jp)
