--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -29,6 +29,7 @@
     - [第二十五題 2024 07 jp](#第二十五題-2024-07-jp)
     - [第二十六題 2024 07 jp](#第二十六題-2024-07-jp)
     - [第二十七題 2024 07 jp](#第二十七題-2024-07-jp)
+    - [第二十八題 2024 07 jp](#第二十八題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -58,6 +59,7 @@
     - [第二十五題 2024 07 cn](#第二十五題-2024-07-cn)
     - [第二十六題 2024 07 cn](#第二十六題-2024-07-cn)
     - [第二十七題 2024 07 cn](#第二十七題-2024-07-cn)
+    - [第二十八題 2024 07 cn](#第二十八題-2024-07-cn)
 
 # 日文
 
@@ -507,6 +509,41 @@
 ３．課長を超える結果だなんてすごいね。
 
 [第二十七題 2024 07 cn](#第二十七題-2024-07-cn)
+
+### 第二十八題 2024 07 jp
+
+大学の新聞部で部長と部員二人が話しています。
+
+女１：来月発行する新聞、野球部の地区大会に向けて特集を一ページ組むことになってるけど、そろそろ内容を練らなきゃね。どうしようか？
+
+男：地区大会、二か月後に迫ってますよね。以前、野球部を取り上げた時はキャプテンの、意気込みやチームの仕上がり具合を中心に取材しましたが。
+
+女２：去年は準優勝に終わったので、今年こそって学内の期待も高まってますよね。
+
+女１：そうだね。何がいいかな？前やったのと同じようなのはしたくないし。
+
+男：ライバルチームの練習の様子を取材してはどうですか？去年の優勝校とは今年も間違いなく顔を合わせることになると思うんですけど....
+
+女１：うん、他にはどうかな？
+
+女２：「選手たちの素顏に迫る」っていうのはどうでしょう？主要な選手二、三人、例えば、投手やキャプテンに密着して一日を追うんです。練習以外の時間、とんな風に過ごしてるかとか、読んだ人選手を身近に感じられるような情報がいいと思うんです。
+
+女１：そうだね？
+
+女２：それか、レギュラー選手を全員紹介するっていうのもいいと思います。選手の守備位置だけじゃなく、趣味とか好きな食べ物とか、顔写真と一緒に載せるんです。読者がお気に入りの選手を見つけられるように。
+
+男：僕は対戦相手のことも情報としてあった方がいいとおもいますけど…。その方が応援に行った時に試合を見てて面白いと思うんです。
+
+女１：そうだね。でも実際どのチームと対戦することになるかはまだわからないから、今他のちーむのことを取り上げても読者にピンと来ないかもしれないね。試合に出る選手全員っていうと紙面が限られてるし。さっきの密着取材の案、面白いんじゃないかな。うん、今回は何人かに絞って取材することにしよう。
+
+新聞に載せる野球部の特集は何を書くことにしましたか。
+
+１．大会向けてのキャプテンの意気込み
+２．ライバルチームの練習の様子
+３．主要な選手の一日の過ごし方
+４．レギュラー選手全員の紹介
+
+[第二十八題 2024 07 cn](#第二十八題-2024-07-cn)
 
 ---
 
@@ -1017,3 +1054,38 @@
 ３．竟然超過課長的成績，太厲害了！
 
 [第二十七題 2024 07 jp](#第二十七題-2024-07-jp)
+
+### 第二十八題 2024 07 cn
+
+答案: 3
+
+在大學的報社裡，部長與兩位部員正在交談。
+
+女 1：下個月要發行的報紙，預定會做一個棒球部為地區大賽加油的特輯佔一整頁，該開始構思內容了呢。怎麼辦好呢？
+
+男：地區大賽離現在已經剩下兩個月了呢。以前我們報導棒球部的時候，是以隊長的抱負和整體隊伍的狀態為主題做採訪的。
+
+女 2：去年是亞軍結束的，所以今年一定要拿冠軍，學校內部的期待也越來越高了呢。
+
+女 1：對啊。要做什麼好呢？不想再做之前那種內容了。
+
+男：那採訪一下對手球隊的練習狀況如何？去年拿冠軍的學校，今年應該也一定會碰頭吧 ⋯⋯
+
+女 1：嗯，還有沒有別的想法？
+
+女 2：那麼，做一個「貼近選手真面目」的主題如何？針對幾位主力選手，例如投手或隊長，進行貼身採訪，一整天跟著他們。像是練習以外的時間都怎麼過，讓讀者能夠感覺更貼近選手的生活。
+
+女 1：嗯，感覺不錯呢。
+
+女 2：或者也可以介紹所有正選球員。我是說，不只是守備位置，也包括興趣、喜歡的食物，搭配照片放上去。讓讀者可以找到自己喜歡的選手。
+
+男：我覺得介紹對手資訊也滿重要的……那樣大家去現場加油時，看比賽會更有趣。
+
+女 1：也是啦。但實際上會對上哪一隊現在還不知道，現在報導其他隊伍的話，讀者可能也無法產生共鳴。而且要介紹所有上場選手的話，篇幅可能不夠。剛剛那個貼身採訪的提案，感覺滿有趣的。嗯，那這次就挑幾個人進行採訪吧。
+
+１．關於比賽的隊長抱負
+２．對手球隊的練習情況
+３．主要選手的一日生活
+４．所有正選選手的介紹
+
+[第二十八題 2024 07 jp](#第二十八題-2024-07-jp)
