--- a/日文檢定/日文聽力/2024-07.md
+++ b/日文檢定/日文聽力/2024-07.md
@@ -30,6 +30,7 @@
     - [第二十六題 2024 07 jp](#第二十六題-2024-07-jp)
     - [第二十七題 2024 07 jp](#第二十七題-2024-07-jp)
     - [第二十八題 2024 07 jp](#第二十八題-2024-07-jp)
+    - [第二十九題 2024 07 jp](#第二十九題-2024-07-jp)
 - [中文](#中文)
   - [2024 07 cn](#2024-07-cn)
     - [第一題 2024 07 cn](#第一題-2024-07-cn)
@@ -60,6 +61,7 @@
     - [第二十六題 2024 07 cn](#第二十六題-2024-07-cn)
     - [第二十七題 2024 07 cn](#第二十七題-2024-07-cn)
     - [第二十八題 2024 07 cn](#第二十八題-2024-07-cn)
+    - [第二十九題 2024 07 cn](#第二十九題-2024-07-cn)
 
 # 日文
 
@@ -544,6 +546,29 @@
 ４．レギュラー選手全員の紹介
 
 [第二十八題 2024 07 cn](#第二十八題-2024-07-cn)
+
+### 第二十九題 2024 07 jp
+
+ラジオでアナウンサーが夏の夜空を楽しむ講座についてはなしています。
+
+女１：山川市にある科学館では来月、夏の夜空を楽しむための四つの講座を開くそうです。講座一番はオリジナルの星座作り。星空の写真を見ながら自分たちで星を繋ぎ合わせて自由にかたちを作り、名前を付けたり星座の物語を作ったりします。講座二番は星空の撮影。露出時間を長く設定できるかめらと三脚さえあれば、意外と簡単に星空を撮影できるそうですよ。講座三番は流れ星の観察です。来月中旬は深夜の夜空に星が降り注ぐ数年に一度の貴重な機会です。ゆっくり眺めながら星に願い事をするのも素敵ですね。最後、講座四番は地球を回る国際宇宙ステーションの観察です。国際宇宙ステーションは、実は日没後のある時間、ある方角に肉眼で見ることができるんだそうですよ。
+
+男：どれか一緒に参加しようよ。参加したいのあった？
+
+女２：うーん、星空を作るより実際に見る方いいかな。あと、星空の写真は自分でも時々撮るから違うのがいいな。
+
+男：すごいね。国際宇宙ステーションも撮ったことある？
+
+女２：ううん、まだ見たこともないの。うーん、だからこの講座に参加してみたいな。
+
+男：そっか。うーん、でもそっちより星をメインで見るやつの方がいいな。
+
+女２：そうだね。めったにないチャンスだもんね。それにしよう！
+
+質問１：女の人が最後に参加してみたいと思ったのはどの講座ですか。
+質問２：二人はどの講座に参加することにしましたか。
+
+[第二十九題 2024 07 cn](#第二十九題-2024-07-cn)
 
 ---
 
@@ -1089,3 +1114,29 @@
 ４．所有正選選手的介紹
 
 [第二十八題 2024 07 jp](#第二十八題-2024-07-jp)
+
+### 第二十九題 2024 07 cn
+
+在廣播中，主播正在介紹關於欣賞夏季夜空的講座。
+
+女 1：位於山川市的科學館，下個月將舉辦四個讓大家享受夏夜星空的講座。第一個講座是「創作原創星座」。大家會一邊看星空的照片，一邊自由連接星星，創造出自己的形狀，還可以命名並創作星座的故事。第二個講座是「星空攝影」。只要有一台可以長時間曝光的相機和三腳架，拍攝星空其實意外地簡單喔。第三個講座是「觀察流星」。下個月中旬是數年一遇、深夜能看到流星傾瀉而下的難得機會。邊慢慢欣賞流星、邊許願應該很浪漫吧。最後，第四個講座是「觀察環繞地球的國際太空站」。其實，在日落後的某個時間、朝某個方向，肉眼也可以看到國際太空站喔。
+
+男：我們一起參加其中一個吧。你有想參加哪個嗎？
+
+女 2：嗯，比起自己創造星座，我更想實際看到星星。而且星空攝影我自己也偶爾會拍，想選點不一樣的。
+
+男：哇，真厲害。那妳有拍過國際太空站嗎？
+
+女 2：沒有耶，我甚至還沒看過。所以我想參加這個講座試試看。
+
+男：這樣啊～不過我還是比較想參加那個以觀賞星星為主的講座耶。
+
+女 2：也是喔，畢竟是很難得的機會呢。那我們就選那個吧！
+
+問題 1：女生最後想參加的是哪個講座？
+答案:4
+
+問題 2：兩人最後決定參加哪個講座？
+答案:3
+
+[第二十九題 2024 07 jp](#第二十九題-2024-07-jp)
