--- a/日文檢定/日文聽力/2023-12.md
+++ b/日文檢定/日文聽力/2023-12.md
@@ -71,8 +71,48 @@
 
     ### 第一題 jp
 
+    時計の会社の営業部で上司と男の人が話しています。男の人はこの後まず、何をしなければなりませんか。
+
+    女：田中さん、今山下食品さんから電話があったんだけどね、山下食品の創立記念パーティーで配布する置時計１００個、納品日を早めてもらえないかって。
+
+    男：納期が来週の火曜日のものですよね？
+
+    女：うん、契約書に書かれてる納期は先方も承知してるけど、何か事情があるみたいで。
+
+    男：そうなんですね。製品は予定通り来週の火曜日にうちの工場から直接先方に納品する手筈になってますが…。
+
+    女：そう。じゃ、工場に納期の前倒しを頼んでみて。工場は２、３日余裕をもって仕上げているはずだから。今週中には届けられると思うんだ。納品の日程を確認した上で、山下食品さんと話したほうがいいから。
+
+    男：わかりました。
+
+    男の人はこの後まず、何をしなければなりませんか。
+
+    １．契約書を確認する　　２．山下食品に納品に行く
+    ３．工場に納品日の変更を依頼する　４．山下食品と打ち合わせをする
+
     # 中文
 
     ## cn
 
     ### 第一題 cn
+
+    答案:3
+
+    在一家鐘錶公司的業務部，主管和一位男員工正在談話。 這位男員工接下來首先需要做的是什麼？
+
+    女：田中先生，剛剛山下食品打來電話，說是希望能提前交貨那一百個要在他們公司創立紀念派對上發送的座鐘。
+
+    男：是那個預定下週二交貨的案子對吧？
+
+    女：對，對方知道合約上寫的是那個日期，但好像有什麼特殊情況。
+
+    男：原來如此。產品是按照原計畫從我們工廠在下週二直接送到對方那邊的。
+
+    女：嗯，那你去跟工廠談談，看看能不能提前交貨。工廠應該會提前個兩三天完成，所以我覺得這週內應該能送達。不過，在這之前要先確認交貨時間，再跟山下食品那邊聯絡比較好。
+
+    男：明白了。
+
+    這位男員工接下來首先需要做什麼？
+
+    １．確認合約內容 ２．去山下食品交貨
+    ３．請工廠變更交貨日期 ４．與山下食品洽談
